@@ -4,8 +4,6 @@ plugins {
     id("buildlogic.java-common-conventions")
 
     application
-
-    id("org.beryx.jlink") version "3.1.1"
 }
 
 application{
@@ -121,72 +119,14 @@ tasks.named<JavaExec>("run") {
     }
 }
 
-// This is more or less a clone of jabgui/build.gradle.kts -> jlink
-jlink {
-    // https://github.com/beryx/badass-jlink-plugin/issues/61#issuecomment-504640018
-    addExtraDependencies(
-        "javafx"
-    )
+val version: String = project.findProperty("projVersion") as? String ?: "100.0.0"
 
-    mergedModuleName = "jabsrv.merged.module"
-
-    // We keep debug statements - otherwise "--strip-debug" would be included
-    addOptions(
-        "--compress",
-        "zip-6",
-        "--no-header-files",
-        "--no-man-pages",
-        "--bind-services"
-    )
-
-    launcher {
-        name = "jabsrv"
-    }
-
-    // TODO: Remove as soon as dependencies are fixed (upstream)
-    forceMerge(
-        "bcprov",
-        "jaxb",
-        "istack",
-        "stax"
-    )
-
-    mergedModule {
-        uses("org.jvnet.hk2.external.generator.ServiceLocatorGeneratorImpl")
-
-        uses("org.glassfish.jersey.internal.inject.InjectionManager")
-        uses("dev.langchain4j.spi.prompt.PromptTemplateFactory")
-
-        excludeRequires("org.glassfish.hk2.locator")
-        excludeRequires("org.apache.logging.log4j")
-        excludeRequires("kotlin.stdlib")
-
-    }
-    jpackage {
-        outputDir = "distribution"
-
-        imageOptions.addAll(listOf(
-            "--java-options", "--add-reads jabsrv.merged.module=jakarta.inject",
-            "--java-options", "--enable-native-access=jabsrv.merged.module"))
-
-        // See https://docs.oracle.com/en/java/javase/24/docs/specs/man/jpackage.html#platform-dependent-options-for-creating-the-application-package for available options
-        if (org.gradle.internal.os.OperatingSystem.current().isWindows) {
-            imageOptions.addAll(
-                listOf(
-                    "--win-console"
-                )
-            )
-            skipInstaller = true
-        } else if (org.gradle.internal.os.OperatingSystem.current().isLinux) {
-            imageOptions.addAll(
-                listOf(
-                    "--icon", "$projectDir/../jabgui/src/main/resources/icons/JabRef-linux-icon-64.png",
-                    "--app-version", "$version"
-                )
-            )
-            skipInstaller = true
-        } else if (org.gradle.internal.os.OperatingSystem.current().isMacOsX) {
-            skipInstaller = true
-        }
-    }
+javaModulePackaging {
+    applicationName = "JabRef";
+    applicationVersion = version;
+    // applicationDescription = ""
+        vendor = "JabRef e.V."
+    copyright = "(c) JabRef e.V. and contributors"
+    // jpackageResources.setFrom(...);
+    // resources.from(...)
 }
